--- a/WebContent/adminAddTransit.zul
+++ b/WebContent/adminAddTransit.zul
@@ -83,8 +83,7 @@
                                                         <row>
                                                             <label value="${c:l('sp.common.actNpNsn')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtactNpNsn" maxlength="45" width="320px" constraint="no empty: ${c:l('error.field.required')}"/>
-                                                               <label value="*" sclass="lblreq" />
+                                                               <textbox id="txtactNpNsn" maxlength="45" width="320px" />
                                                                <label value="${c:l('sp.common.max45')}" sclass="lblexample"/>
                                                             </hlayout>
                                                         </row>
