--- a/WebContent/catProducts.zul
+++ b/WebContent/catProducts.zul
@@ -12,11 +12,12 @@
         </groupbox>
         <separator/>
         <div>
-            <listbox id="lbxRecords" fixedLayout="true" width="580px" height="320px">
+            <listbox id="lbxRecords" fixedLayout="true" width="590px" height="320px">
                 <listhead>
                     <listheader label="${c:l('sp.common.PartNumber')}" width="140px" sort="auto"/>
                     <listheader label="${c:l('sp.common.descripton')}" width="300px" sort="auto"/>
                     <listheader label="${c:l('sp.common.amount')}" width="105px" sort="auto"/>
+                    <listheader label="-" width="45px"/>
                 </listhead>
             </listbox>
         </div>
