--- a/WebContent/monitoring.zul
+++ b/WebContent/monitoring.zul
@@ -74,15 +74,16 @@
                                                    <!--Record Listbox-->
                                             <separator/>
                                             <div align="left">
-                                                <listbox id="lbxReport" width="1190px" height="360px" mold="paging">
+                                                <listbox id="lbxReport" width="1390px" height="360px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="#" width="40px"/>
-														<listheader label="${c:l('sp.common.PartNumber')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.name')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.provider')}" width="215px"/>
-                                                        <listheader label="${c:l('sp.common.label.expirationDate')}" width="210px"/>
-                                                        <listheader label="${c:l('sp.transaction.amount')}" width="210px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="115px"/>
+														<listheader label="${c:l('sp.common.PartNumber')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.name')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.serial')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.provider')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.condition')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.label.expirationDate')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.transaction.amount')}" width="150px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="100px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
@@ -117,15 +118,16 @@
                                                    <!--Record Listbox-->
                                             <separator/>
                                             <div align="left">
-                                                <listbox id="lbxReport2" width="1190px" height="330px" mold="paging">
+                                                <listbox id="lbxReport2" width="1390px" height="330px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="#" width="40px"/>
-                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.name')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.provider')}" width="215px"/>
-                                                        <listheader label="${c:l('sp.common.date.expiration')}" width="210px"/>
-                                                        <listheader label="${c:l('sp.transaction.amount')}" width="210px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="115px"/>
+                                                       <listheader label="${c:l('sp.common.PartNumber')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.name')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.serial')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.provider')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.condition')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.label.expirationDate')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.transaction.amount')}" width="150px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="100px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
@@ -149,14 +151,14 @@
                                                    <!--Record Listbox-->
                                             <separator/>
                                             <div align="left">
-                                                <listbox id="lbxReport3" width="1190px" height="360px" mold="paging">
+                                                <listbox id="lbxReport3" width="1390px" height="360px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="#" width="40px"/>
-                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="230px"/>
+                                                       <listheader label="${c:l('sp.common.PartNumber')}" width="230px"/>
                                                         <listheader label="${c:l('sp.common.name')}" width="230px"/>
+                                                        <listheader label="${c:l('sp.common.actNpNsn')}" width="230px"/>
                                                         <listheader label="${c:l('sp.common.ubicationBox')}" width="240px"/>
                                                         <listheader label="${c:l('sp.common.stockMin')}" width="230px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="220px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="230px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
@@ -187,15 +189,16 @@
                                                    <!--Record Listbox-->
                                             <separator/>
                                             <div align="left">
-                                                <listbox id="lbxReport4" width="1190px" height="330px" mold="paging">
+                                                <listbox id="lbxReport4" width="1390px" height="330px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="#" width="60px"/>
-                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.name')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.provider')}" width="215px"/>
-                                                        <listheader label="${c:l('sp.common.date.cure')}" width="240px"/>
-                                                        <listheader label="${c:l('sp.transaction.amount')}" width="210px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="125px"/>
+                                                       <listheader label="${c:l('sp.common.PartNumber')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.name')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.serial')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.provider')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.condition')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.label.expirationDate')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.transaction.amount')}" width="150px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="100px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
@@ -220,15 +223,14 @@
                                                    <!--Record Listbox-->
                                             <separator/>
                                             <div align="left">
-                                                <listbox id="lbxReport5" width="1190px" height="360px" mold="paging">
+                                                <listbox id="lbxReport5" width="1390px" height="360px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="#" width="40px"/>
-                                                        <listheader label="${c:l('sp.common.control.designation')}" width="190px" sort="auto"/>
-                                                        <listheader label="${c:l('sp.common.control.id.instrument')}" width="190px" sort="auto"/>
+                                                        <listheader label="${c:l('sp.common.control.designation')}" width="240px" sort="auto"/>
+                                                        <listheader label="${c:l('sp.common.control.id.instrument')}" width="240px" sort="auto"/>
                                                         <listheader label="${c:l('sp.common.control.braund.model')}" width="300px"/> 
-                                                        <listheader label="${c:l('sp.common.serial')}" width="170px"/>
-                                                        <listheader label="${c:l('sp.common.control.date.calibration')}" width="160px"/>
-                                                        <listheader label="${c:l('sp.common.control.due.date')}" width="140px"/>
+                                                        <listheader label="${c:l('sp.common.serial')}" width="230px"/>
+                                                        <listheader label="${c:l('sp.common.control.date.calibration')}" width="190px"/>
+                                                        <listheader label="${c:l('sp.common.control.due.date')}" width="190px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
