--- a/WebContent/adminAddMetrorologicalControl.zul
+++ b/WebContent/adminAddMetrorologicalControl.zul
@@ -144,6 +144,13 @@
                                                             </hlayout>
                                                         </row>
                                                         <row>
+                                                            <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <combobox id="cmbCategory" width="190px" mold="rounded" readonly="true"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
+                                                        <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
                                                                <textbox id="txtObservation"  rows="4" maxlength="45" width="320px"/>                                 
