--- a/WebContent/viewMetrologicalControl.zul
+++ b/WebContent/viewMetrologicalControl.zul
@@ -143,6 +143,13 @@
                                                              
                                                             </hlayout>
                                                         </row>
+                                                         <row>
+                                                            <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <combobox id="cmbCategory" width="190px" mold="rounded" readonly="true"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
                                                         <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
