--- a/WebContent/reportTransit.zul
+++ b/WebContent/reportTransit.zul
@@ -47,7 +47,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.transaction.list')}" onClick='Executions.sendRedirect(&quot;listTransactions.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.reporte.transit')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
